# src/main/resources/openapi/university-scheduler.yaml
@@ -871,7 +871,7 @@ paths:
                 $ref: '#/components/schemas/Error'
     delete:
       summary: Delete group
-      operationId: delete
+      operationId: deleteById
       tags:
         - Groupz
       parameters:
@@ -1028,7 +1028,7 @@ paths:
                 $ref: '#/components/schemas/Error'
     delete:
       summary: Delete schedule
-      operationId: delete
+      operationId: deleteById
       tags:
         - Schedulez
       parameters:
